spacing on SU and LI + fixed parallax

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,19 @@
-/*----------------FORMS----------------*/
+/*-----------------FORMS----------------------
+-------------------PAGE ELEMENTS--------------
+-------------------BUTTONS--------------------
+-------------------AUTO IMAGE OF THE DAY------
+-------------------NAVBAR---------------------
+-------------------PARALLAX-------------------
+-------------------VOYAGERS LOGO--------------
+-------------------EXPLORATION FACTS DIV------
+-------------------CARDS----------------------
+-------------------FOOTER---------------------
+-------------------LINKS----------------------
+-------------------SPHERE---------------------
+-------------------CHART--------------------*/
+
+
+/*-------------------FORMS---------------------*/
 
 form.signup,
 form.login {
@@ -7,7 +22,7 @@ form.login {
 
 .form-control {
     display: block;
-    width: 50%;
+    /* width: 50%; */
 }
 
 
@@ -251,7 +266,7 @@ img {
 
 /*----------------Log In Parallax----------------*/
 
-.logignParallax {
+.logSignParallax {
     background-image: url("../img/stars.jpg");
     height: 100%;
     /* background-attachment: fixed; */
@@ -349,13 +364,41 @@ img {
     padding-top: 10px;
 }
 
+
+/* unvisited link */
+
+a.gh:link {
+    color: #ee5f00;
+}
+
+
+/* visited link */
+
+a.gh:visited {
+    color: #ee5f00;
+}
+
+
+/* mouse over link */
+
+a.gh:hover {
+    color: white;
+}
+
+
+/* selected link */
+
+a.gh:active {
+    color: rgb(255, 251, 0);
+}
+
 #loginForm {
-    margin-top: 200px;
+    margin-top: 100px;
     z-index: 1;
 }
 
 #signupForm {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     z-index: 1;
 }
 
@@ -379,11 +422,11 @@ img {
 
 .sphere-animation {
     position: absolute;
-    top: 50%;
+    top: 20%;
     left: 50%;
     width: 580px;
     height: 580px;
-    margin: -290px 0 0 -290px;
+    /* margin: -290px 0 0 -290px; */
 }
 
 .sphere path {
